--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-read me to compile the linux-0.11
+这是一个编译linux-0.11的说明文档
+1、编译环境
+	Linux printkhsp-pc 3.16.0-4-686-pae #1 SMP Debian 3.16.7-ckt25-2 (2016-04-08) i686 GNU/Linux
+
