--- a/README
+++ b/README
@@ -150,3 +150,143 @@ make[1]: Leaving directory '/home/hsp/kernel_source/linux-0.11-learning/kernel'
 Makefile:72: recipe for target 'kernel/kernel.o' failed
 make: *** [kernel/kernel.o] Error 2
 	解决办法：将gld改成ld,gld是老的称呼，现在已经改成了ld
+2.8:
+(cd fs; make)
+make[1]: Entering directory '/home/hsp/kernel_source/linux-0.11-learning/fs'
+gcc -Wall -O -fstrength-reduce  -fomit-frame-pointer -nostdinc -I../include \
+-c -o block_dev.o block_dev.c
+In file included from block_dev.c:10:0:
+../include/linux/kernel.h:5:1: warning: function return types not compatible due to ‘volatile’
+ volatile void panic(const char * str);
+ ^
+../include/linux/kernel.h:5:1: warning: function return types not compatible due to ‘volatile’
+../include/linux/kernel.h:5:1: warning: function return types not compatible due to ‘volatile’
+../include/asm/segment.h: Assembler messages:
+../include/asm/segment.h:27: Error: bad register name `%bpl'
+Makefile:13: recipe for target 'block_dev.o' failed
+make[1]: *** [block_dev.o] Error 1
+make[1]: Leaving directory '/home/hsp/kernel_source/linux-0.11-learning/fs'
+Makefile:78: recipe for target 'fs/fs.o' failed
+make: *** [fs/fs.o] Error 2
+	解决办法：将fs/Makefile文件的-O选项去掉就可以了
+2.9:
+(cd fs; make)
+make[1]: Entering directory '/home/hsp/kernel_source/linux-0.11-learning/fs'
+gcc -Wall -fstrength-reduce  -fomit-frame-pointer -nostdinc -I../include \
+-c -o exec.o exec.c
+In file included from exec.c:21:0:
+../include/string.h:128:22: warning: conflicting types for built-in function ‘strchr’
+ extern inline char * strchr(const char * s,char c)
+                      ^
+../include/string.h:145:22: warning: conflicting types for built-in function ‘strrchr’
+ extern inline char * strrchr(const char * s,char c)
+                      ^
+../include/string.h:379:22: warning: conflicting types for built-in function ‘memchr’
+ extern inline void * memchr(const void * cs,char c,int count)
+                      ^
+../include/string.h:395:22: warning: conflicting types for built-in function ‘memset’
+ extern inline void * memset(void * s,char c,int count)
+                      ^
+In file included from exec.c:27:0:
+../include/linux/kernel.h:5:1: warning: function return types not compatible due to ‘volatile’
+ volatile void panic(const char * str);
+ ^
+../include/linux/kernel.h:5:1: warning: function return types not compatible due to ‘volatile’
+../include/linux/kernel.h:5:1: warning: function return types not compatible due to ‘volatile’
+exec.c: In function ‘count’:
+exec.c:80:2: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
+  if (tmp = argv)
+  ^
+exec.c: In function ‘copy_strings’:
+exec.c:139:44: error: lvalue required as left operand of assignment
+         !(pag = (char *) page[p/PAGE_SIZE] =
+                                            ^
+exec.c: In function ‘do_execve’:
+exec.c:239:3: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
+   if (cp = strchr(buf, '\n')) {
+   ^
+Makefile:13: recipe for target 'exec.o' failed
+make[1]: *** [exec.o] Error 1
+make[1]: Leaving directory '/home/hsp/kernel_source/linux-0.11-learning/fs'
+Makefile:78: recipe for target 'fs/fs.o' failed
+make: *** [fs/fs.o] Error 2
+	解决办法：在exec.c中出现了a=b=c的句子，将其拆开即可
+
+2.10
+(cd kernel/blk_drv; make)
+make[1]: Entering directory '/home/hsp/kernel_source/linux-0.11-learning/kernel/blk_drv'
+gcc -Wall -O -fstrength-reduce -fomit-frame-pointer -finline-functions -nostdinc -I../../include \
+-c -o floppy.o floppy.c
+In file included from floppy.c:35:0:
+../../include/linux/kernel.h:5:1: warning: function return types not compatible due to ‘volatile’
+ volatile void panic(const char * str);
+ ^
+../../include/linux/kernel.h:5:1: warning: function return types not compatible due to ‘volatile’
+../../include/linux/kernel.h:5:1: warning: function return types not compatible due to ‘volatile’
+In file included from floppy.c:42:0:
+blk.h:87:6: error: #elif with no expression
+ #elif
+      ^
+Makefile:24: recipe for target 'floppy.o' failed
+make[1]: *** [floppy.o] Error 1
+make[1]: Leaving directory '/home/hsp/kernel_source/linux-0.11-learning/kernel/blk_drv'
+Makefile:66: recipe for target 'kernel/blk_drv/blk_drv.a' failed
+make: *** [kernel/blk_drv/blk_drv.a] Error 2
+	解决办法：将87行的elif改成else即可
+
+2.11
+(cd kernel/blk_drv; make)
+make[1]: Entering directory '/home/hsp/kernel_source/linux-0.11-learning/kernel/blk_drv'
+gar rcs blk_drv.a ll_rw_blk.o floppy.o hd.o ramdisk.o
+make[1]: gar: Command not found
+Makefile:30: recipe for target 'blk_drv.a' failed
+make[1]: *** [blk_drv.a] Error 127
+make[1]: Leaving directory '/home/hsp/kernel_source/linux-0.11-learning/kernel/blk_drv'
+Makefile:66: recipe for target 'kernel/blk_drv/blk_drv.a' failed
+make: *** [kernel/blk_drv/blk_drv.a] Error 2
+	解决办法：将gar改成ar
+2.11
+(cd kernel/chr_drv; make)
+make[1]: Entering directory '/home/hsp/kernel_source/linux-0.11-learning/kernel/chr_drv'
+as -c -o keyboard.o keyboard.s
+keyboard.S: Assembler messages:
+keyboard.S:47: Error: `%al' not allowed with `xorl'
+keyboard.S:53: Warning: indirect call without `*'
+Makefile:22: recipe for target 'keyboard.o' failed
+make[1]: *** [keyboard.o] Error 1
+make[1]: Leaving directory '/home/hsp/kernel_source/linux-0.11-learning/kernel/chr_drv'
+Makefile:69: recipe for target 'kernel/chr_drv/chr_drv.a' failed
+make: *** [kernel/chr_drv/chr_drv.a] Error 2
+	解决办法：将xorl改成xor
+2.12:
+(cd lib; make)
+make[1]: Entering directory '/home/hsp/kernel_source/linux-0.11-learning/lib'
+gcc -Wall -O -fstrength-reduce -fomit-frame-pointer -finline-functions -nostdinc -I../include \
+-c -o malloc.o malloc.c
+malloc.c: In function ‘init_bucket_desc’:
+malloc.c:104:3: warning: function with qualified void return type called
+   panic("Out of memory in init_bucket_desc()");
+   ^
+malloc.c: In function ‘malloc’:
+malloc.c:133:3: warning: function with qualified void return type called
+   panic("malloc: bad arg");
+   ^
+malloc.c:156:46: error: lvalue required as left operand of assignment
+   bdesc->page = bdesc->freeptr = (void *) cp = get_free_page();
+                                              ^
+malloc.c:158:4: warning: function with qualified void return type called
+    panic("Out of memory in kernel malloc()");
+    ^
+malloc.c: In function ‘free_s’:
+malloc.c:202:2: warning: function with qualified void return type called
+  panic("Bad address passed to kernel free_s()");
+  ^
+malloc.c:222:5: warning: function with qualified void return type called
+     panic("malloc bucket chains corrupted");
+     ^
+Makefile:24: recipe for target 'malloc.o' failed
+make[1]: *** [malloc.o] Error 1
+make[1]: Leaving directory '/home/hsp/kernel_source/linux-0.11-learning/lib'
+Makefile:81: recipe for target 'lib/lib.a' failed
+make: *** [lib/lib.a] Error 2
+	解决办法：将A=B=C拆开即可
